
noinst_HEADERS = abs_text_console.h keycodes.h slw_console.h slw_log.h	\
			slw_prompt.h jutils.h linklist.h slw.h		\
			slw_popup.h slw_text.h

noinst_LIBRARIES = libslw.a

libslw_a_SOURCES = slw_console.cpp slw.cpp slw_popup.cpp slw_log.cpp	\
			slw_prompt.cpp abs_text_console.cpp		\
			slw_text.cpp linklist.cpp jutils.cpp

